Added a few more explanation paragraphs

--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
 	</script>
 
 	<div class = "header"  id="top_page">
-		<h1 class = main_title>Police vs. Crime
-			<h2 class = "sub_title">Visualizing crime and police in the United States</h2>
-		</h1>
+		<h1 class = main_title>Crime Analytics</h1>
+		<h2 class = "sub_title">Understanding Crime within the United States of America</h2>
 	</div>
 
 	<div class = "paragraph">
-		<p class = "explaination">This site provides an overview and comparisons of varous different government datasets, allowing us to see the correlation between police actions and the amount of crime in the area. The data we have is divided by state, allowing us to look at how differences across states can affect the results of the data. Hopefully, these reports can help police departments, officers, and elected officials make better decisions to keep citizens safe.</p>
+		<p class = "explaination">The United States of America has been plagued with high crime rates for a while. We aim to help tackle this problem with this site to provide an overview and comparisons of different government datasets about crime. Allowing anyone to find correlations between law enforcement and the crime rates. The data has been filtered by state and by topic. We believe this tool will give police departments and elected officials a better understanding of crime in their state, ultimatly making citizens more protected. This tool is organized into three main sections; Police analytics, Crime analytics, and a combination of both. There is also a search bar that provides more detailed knowledge with the expense of no visualization.</p>
 	</div>
 
 	<br>
@@ -72,7 +71,7 @@
 					<div class = "picture_overlay_left">
 						<div class = "picture_text">
 							<h1>Ziyang She</h1>
-							<h2>Data analyst</h2>
+							<h2>Data Analyst</h2>
 							<p>Computer Science Major</p>
 							<p></p>
 						</div>
@@ -109,7 +108,7 @@
 			</div>
 		</div>
 		<br>
-		<p>This is paragraph about us the creators</p>
+		<p>Our team is made up of three Computer Science seniors from American Univeristy. With a large range of expertise, each member took tasks that complemented their strengths. As well as, taking small tasks that pushed the knowlegde of each member. We approached this problem of big data, not too predict outcomes but to give a useful tool to our nations law enforement.</p>
 	</div>
 	<br>
 	<br>
@@ -125,12 +124,12 @@
 	<br>
 	<div class = "map">
 		<div class = "paragraph" >
-			<p class = "crime_explaination">Here, we can see data for each state for the amount of reports of violent crime, the amount of reported assaulted officers, and the amount of reported homicides. The states with the highest amounts of all of these incidents are California and Texas. While that can mostly be explained by differences in population, there are still interesting findings in this data. For example, California has by far the greatest amount of homicides, beating out the next largest state, Texas, by about 700 more incidents. </p>
+			<h1>United States Crime Analytics</h1>
+			<p class = "crime_explaination">Here, we can see data for each state for the amount of reports of violent crime, the amount of reported assaulted officers and the amount of reported homicides. The states with the highest amounts of all of these incidents are California and Texas. While that can mostly be explained by differences in population, there are still interesting findings in this data. For example, California has by far the greatest amount of homicides, beating out the next largest state, Texas, by about 700 incidents. </p>
 		</div>
-		<h1>United States Crime</h1>
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/edfce289-d7bf-4528-8c4e-239c5837bf17/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>To use the graph, you can click and drag with the mouse to see other sections (such as Alaska and Hawaii), and use the scroll wheel or the embedded buttons to zoom in or zoom out. To show the data of one of the bar graphs on th echart, simply click on the treadrop icon. On certain graphs, you can click on multiple teardrops to see how the two datasets affect each other.</h3>
+		<h3>To use the interactive map, click and drag with the mouse to move around and use the scroll wheel to zoom in or out. To project the data of a bar graph on the right, simply click on the teardrop icon. This action will layer the histogram data onto the map, providing detailed analysis.</h3>
 	</div>
 
 	<br>
@@ -141,12 +140,12 @@
 	<br>
 	<div class = "map">
 		<div class = "paragraph" >
-			<p class = "police_explaination">This graph has data on the amount of police officrs per 1000 people (or essentially police officer density), on total police officer expenditure, and on total corrections spending in general. Interestingly enough, the largest states weren't the ones the the most police expenditure even though the amount of crime seems to have scaled linearly with the data. This means that these states could possibly reduce the amount of crime they have by increasing their amount of police officers. Another interesting point, while California doesn't spend a lot of money of police officers or euipment, the are amongst the highest spenders in the country in terms of other forms of correction, such as on prisons. So California may be able to improve their situation by redistributing how it spends its money.</p>
+			<h1>United States Law Enforcement Analytics</h1>
+			<p class = "police_explaination">This graph has data on the amount of police officrs per 1000 people, total police officer expenditure, and total corrections spending. Interestingly enough, the large population states didn't have the most police expenditure, even though the  crime rate seems to have scaled linearly with the data. This could mean that these states could see a decrease in crime by increasing their amount of police officers. Another interesting point, while California doesn't spend a lot of money of police officers or equipment, they are amongst the highest spenders in the country in terms of correction, such as prisons.</p>
 		</div>
-		<h1>United States Law Enforcement</h1>
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/c07925e1-5c82-45ac-9811-e5e2123f9e87/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>To use the graph, you can click and drag with the mouse to see other sections (such as Alaska and Hawaii), and use the scroll wheel or the embedded buttons to zoom in or zoom out. To show the data of one of the bar graphs on th echart, simply click on the treadrop icon. On certain graphs, you can click on multiple teardrops to see how the two datasets affect each other.</h3>
+		<h3>To use the interactive map, click and drag with the mouse to move around and use the scroll wheel to zoom in or out. To project the data of a bar graph on the right, simply click on the teardrop icon. This action will layer the histogram data onto the map, providing detailed analysis.</h3>
 	</div>
 
 	<br>
@@ -156,18 +155,21 @@
 
 	<br>
 	<div class = "map" >
-		<h1>Police vs Crime</h1>
+		<h1>Combined Police and Crime Analytics</h1>
+		<p class = "combined_explantation">The following section includes maps that combined the crime and police data. These were created to show correlation between the two sets of data.</p>
+		<p class = "police_crime">This graph displays some stuff, the map is super broken right now</p> 
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/dae6e858-e428-4081-a4ad-9169029635e1/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>To use the graph, you can click and drag with the mouse to see other sections (such as Alaska and Hawaii), and use the scroll wheel or the embedded buttons to zoom in or zoom out. To show the data of one of the bar graphs on th echart, simply click on the treadrop icon. On certain graphs, you can click on multiple teardrops to see how the two datasets affect each other.</h3>
+		<h3>To use the interactive map, click and drag with the mouse to move around and use the scroll wheel to zoom in or out. To project the data of a bar graph on the right, simply click on the teardrop icon. This action will layer the histogram data onto the map, providing detailed analysis.</h3>
 	</div>
 
 	<br>
 	<div class = "map">
 		<h1>Citizens vs Crime</h1>
+		<p class = "citizen_crime">This map shows the correlations between the population of each state and different crimes that are prelavant. The darker the color, the higher the population to violent crime.</p>
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/f7ae15d6-8fde-4b12-8e9e-fcbcbdd33b59/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>To use the graph, you can click and drag with the mouse to see other sections (such as Alaska and Hawaii), and use the scroll wheel or the embedded buttons to zoom in or zoom out. To show the data of one of the bar graphs on th echart, simply click on the treadrop icon. On certain graphs, you can click on multiple teardrops to see how the two datasets affect each other.</h3>
+		<h3>To use the interactive map, click and drag with the mouse to move around and use the scroll wheel to zoom in or out. To project the data of a bar graph on the right, simply click on the teardrop icon. This action will layer the histogram data onto the map, providing detailed analysis.</h3>
 	</div>
 
 	<br>
@@ -181,11 +183,13 @@
 	<br>
 	<br>
 	<div class = "paragraph" >
-		<p class = "contributions">This is where we place the contributions</p>
+		<h4 class = "contributions">The data was collected through public access goverment websites, data.gov and fbi.gov. The maps were created with CARTO, a free software for students. A special
+		thanks to Professor Owrang for mentoring the capstone course.</h4>
 		<br>
-		<p class = "contact_us">This is where we place the contact us and license stuff</p>
+		<p class = "contact_us">For any questions please us at jd1504a@american.edu.</p>
+		<p class = "license">This is a free software for educational and personal use, referencing the authors is not necessary. This software can not be used for commreical uses.
 	</div>
-	<h2><p> Do you like it so far? 
+	<h2><p> Pretty great right?! 
 		<a href="temp_page.html" class="button">Yes!</a>
 	</p></h2>
 	<br>
