--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@
 	<hr class = "short_line" >
 
 	<br>
-	<form class="example" action="https://blankslate.io/">
+	<form class="example" action="../state_date.html">
 		<input type="text" placeholder="What are you looking for..." name="search">
-		<button type="submit"><i class="fa fa-search"></i></button>
+		<!--<button type="submit"><i class="fa fa-search"></i></button>-->
+		<a href="state_page.html" class="button">Search</a>
 	</form>
+	<h2>
+		<a href="state_page.html" class="button">Search</a>
+	</h2>
 
 	<br>
 	<hr class = "short_line">
