--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 	<form class="example" action="../state_date.html">
 		<input type="text" placeholder="What are you looking for..." name="search">
 		<!--<button type="submit"><i class="fa fa-search"></i></button>-->
-		<a href="state_page.html" class="button">Search</a>
+		<a href="state_data.html" class="button">Search</a>
 	</form>
 	<h2>
-		<a href="state_page.html" class="button">Search</a>
+		<a href="state_data.html" class="button">Search</a>
 	</h2>
 
 	<br>
