--- a/index.html
+++ b/index.html
@@ -185,9 +185,8 @@
 	<div class = "paragraph" >
 		<h4 class = "contributions">The data was collected through public access goverment websites, data.gov and fbi.gov. The maps were created with CARTO, a free software for students. A special
 		thanks to Professor Owrang for mentoring the capstone course.</h4>
-		<br>
-		<p class = "contact_us">For any questions please us at jd1504a@american.edu.</p>
-		<p class = "license">This is a free software for educational and personal use, referencing the authors is not necessary. This software can not be used for commreical uses.
+		<h4 class = "contact_us">For any questions please us at jd1504a@american.edu.</h4>
+		<h4 class = "license">This is a free software for educational and personal use, referencing the authors is not necessary. This software can not be used for commreical uses.</h4>
 	</div>
 	<h2><p> Pretty great right?! 
 		<a href="temp_page.html" class="button">Yes!</a>
