insert content below search bar

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
 		<a href="state_data.html" class="button">Search</a>
 	</form>
 
+	<h2>This search bar can allow you to access our public database. You can access comprehensive crime data across the United States, or you can access individual state crime data.</h2>
+
+	<marquee behavior="scroll" direction="left">Are you looking for your United State's criminal data?</marquee>
+	<marquee behavior="scroll" direction="right">Or you looking for state's criminal data that you're interested in?</marquee>
+
+	<marquee behavior="scroll" direction="right" scrollamount="4">Washington DC</marquee>
+	<marquee behavior="scroll" direction="left" scrollamount="6">Miami</marquee>
+	<marquee behavior="scroll" direction="left" scrollamount="7">San Francisco</marquee>
+	<marquee behavior="scroll" direction="right" scrollamount="5">Los Angeles</marquee>
+	<marquee behavior="scroll" direction="left" scrollamount="6">Chicago</marquee>
+	<marquee behavior="scroll" direction="right" scrollamount="7">Orlando</marquee>
+	<marquee behavior="scroll" direction="right" scrollamount="8">Seattle</marquee>
+	<marquee behavior="scroll" direction="left" scrollamount="9">Salt Lake City</marquee>
+
+
 	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
