--- a/temp_page.html
+++ b/temp_page.html
@@ -8,7 +8,7 @@
 		<img src = "temp picture.jpeg" alt = "programming">
 		<br>
 		<h2>
-			<a href="index.html" class="button">Return</a>
+			<a href="index.html#searchParam" class="button">Return</a>
 		</h2>
 	</div>
 </body>
