--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 	<title>CS Capstone</title>
-	<link rel="stylesheet" type="text/css" href="visualization_site.css">
+	<link rel="stylesheet" type="text/css" href="index_visual.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Judson' rel='stylesheet'>
 	<style type="text/css">
+
 	body{
 		font-family: 'Judson';
 	}
@@ -45,14 +46,15 @@
 	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
-	<hr class = "short_line" >
+	<hr class = "short_line">
 
-	<br>
+	<!--<br>
 	<form class="example" action="../state_date.html">
 		<input type="text" placeholder="What are you looking for..." name="search">
-		<!--<button type="submit"><i class="fa fa-search"></i></button>-->
-		<a href="state_data.html" class="button">Search</a>
-	</form>
+		<button type="submit"><i class="fa fa-search"></i></button>
+		<a href="police_assault.html" class="button">Search</a>
+		<p>Include what the user can do here with the search bar</p>
+	</form>-->
 
 	<br>
 	<hr class = "short_line">
@@ -72,7 +74,7 @@
 					<div class = "picture_overlay_left">
 						<div class = "picture_text">
 							<h1>Ziyang She</h1>
-							<h2>Data Analyst</h2>
+							<p>Data Analyst</p>
 							<p>Computer Science Major</p>
 							<p></p>
 						</div>
@@ -86,7 +88,7 @@
 					<div class = "picture_overlay_up">
 						<div class = "picture_text">
 							<h1>James Deromedi</h1>
-							<h2>Map Creator</h2>
+							<p>Map Maker</p>
 							<p>Computer Science Major</p>
 							<p>Physics Minor</p>
 						</div>
@@ -100,7 +102,7 @@
 					<div class = "picture_overlay_right">
 						<div class = "picture_text">
 							<h1>Karefa Kargbo (JR)</h1>
-							<h2>Content Writer</h2>
+							<p>Content Writer</p>
 							<p>Computer Science Major</p>
 							<p>Economics Major</p>
 						</div>
@@ -146,9 +148,42 @@
 		</div>
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/c07925e1-5c82-45ac-9811-e5e2123f9e87/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>To use the interactive map, click and drag with the mouse to move around and use the scroll wheel to zoom in or out. To project the data of a bar graph on the right, simply click on the teardrop icon. This action will layer the histogram data onto the map, providing detailed analysis.</h3>
+		<h3 id = "searchParam">To use the interactive map, click and drag with the mouse to move around and use the scroll wheel to zoom in or out. To project the data of a bar graph on the right, simply click on the teardrop icon. This action will layer the histogram data onto the map, providing detailed analysis.</h3>
 	</div>
 
+	<h2>Police Search Table</h2>
+
+	<input type="text" id="searchBar" onkeyup="searchFunction()" placeholder="Type to reduce options" title="Type in variable">
+
+	<ul id="myList">
+		<li><a href="police_assault.html#month">Month of Assault</a></li>
+		<li><a href="police_assault.html#day">Day of Assault</a></li>
+
+		<li><a href="police_assault.html#time">Time of Assault</a></li>
+		<li><a href="police_assault.html#lighting">Lighting Conditions of Assault</a></li>
+
+		<li><a href="police_assault.html#race_sex">Race,Sex, and Age of Victims</a></li>
+		<li><a href="police_assault.html#weapon">Type of Weapon used in Assault</a></li>
+	</ul>
+
+	<script>
+		function searchFunction() {
+			var input, filter, ul, li, a, i, txtValue;
+			input = document.getElementById("searchBar");
+			filter = input.value.toUpperCase();
+			ul = document.getElementById("myList");
+			li = ul.getElementsByTagName("li");
+			for (i = 0; i < li.length; i++) {
+				a = li[i].getElementsByTagName("a")[0];
+				txtValue = a.textContent || a.innerText;
+				if (txtValue.toUpperCase().indexOf(filter) > -1) {
+					li[i].style.display = "";
+				} else {
+					li[i].style.display = "none";
+				}
+			}
+		}
+	</script>
 	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
