--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
 	<hr class = "long_line">
 	<hr class = "short_line">
 
-	<!--<br>
-	<form class="example" action="../state_date.html">
+	<br>
+	<form class="example" action="police_assault.html">
 		<input type="text" placeholder="What are you looking for..." name="search">
 		<button type="submit"><i class="fa fa-search"></i></button>
-		<a href="police_assault.html" class="button">Search</a>
-		<p>Include what the user can do here with the search bar</p>
-	</form>-->
+		<!--<p>Include what the user can do here with the search bar</p>-->
+	</form>
 
 	<h2>This search bar can allow you to access our public database. You can access comprehensive crime data across the United States, or you can access individual state crime data.</h2>
 
