--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<div class = "picture_overlay_left">
 						<div class = "picture_text">
 							<h1>Ziyang She</h1>
-							<p>Data Analyst</p>
+							<p>Data Sorting</p>
 							<p>Computer Science Major</p>
 							<p></p>
 						</div>
