Added Crime Statistical Analysis Page

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/edfce289-d7bf-4528-8c4e-239c5837bf17/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
 		<h3>To use the interactive map, click and drag with the mouse to move around and use the scroll wheel to zoom in or out. To project the data of a bar graph on the right, simply click on the teardrop icon. This action will layer the histogram data onto the map, providing detailed analysis.</h3>
+		
+		<ul id="myList">
+		<li><a href="crime_tables.html">Crime Data Analysis</a></li>
+		</ul>
 	</div>
 
 	<br>
