Fixed some Typos

--- a/police_assault.html
+++ b/police_assault.html
@@ -53,7 +53,7 @@
   <br>
 
   <h2 id = "month">Law Enforcement Officers Assaulted</h2>
-  <p>Month of Incident, 2011–2015</p>
+  <p>Month of Incident, 2011 to 2015</p>
 
   <table style="width:80%" align="center">
     <tr>
@@ -75,7 +75,7 @@
       <td>85</td>
     </tr>
     <tr>
-      <td>Jabuary</td>
+      <td>January</td>
       <td>59</td>
       <td>11</td>
       <td>12</td>
@@ -193,7 +193,7 @@
   <br>
 
   <h2 id = "day">Law Enforcement Officers Assaulted</h2>
-  <p>Day of Incident, 2011–2015</p>
+  <p>Day of Incident, 2011 to 2015</p>
 
   <table style="width:80%" align="center">
     <tr>
@@ -288,7 +288,7 @@
   <br>
 
   <h2>Law Enforcement Officers Assaulted</h2>
-  <p>Time of Incident, 2011–2015</p>
+  <p>Time of Incident, 2011 to 2015</p>
 
 
   <table style="width:80%" align="center">
@@ -311,7 +311,7 @@
       <td>85</td>
     </tr>
     <tr>
-      <td>12:01 a.m.–2 a.m.</td>
+      <td>12:01 a.m. to 2 a.m.</td>
       <td>55</td>
       <td>15</td>
       <td>7</td>
@@ -320,7 +320,7 @@
       <td>8</td>
     </tr>
     <tr>
-      <td>2:01 a.m.–4 a.m.</td>
+      <td>2:01 a.m. to 4 a.m.</td>
       <td>40</td>
       <td>6</td>
       <td>12</td>
@@ -329,7 +329,7 @@
       <td>4</td>
     </tr>
     <tr>
-      <td>4:01 a.m.–6 a.m.</td>
+      <td>4:01 a.m. to 6 a.m.</td>
       <td>22</td>
       <td>5</td>
       <td>7</td>
@@ -338,7 +338,7 @@
       <td>1</td>
     </tr>
     <tr>
-      <td>6:01 a.m.–8 a.m.</td>
+      <td>6:01 a.m. to 8 a.m.</td>
       <td>20</td>
       <td>8</td>
       <td>2</td>
@@ -347,7 +347,7 @@
       <td>2</td>
     </tr>
     <tr>
-      <td>8:01 a.m.–10 a.m.</td>
+      <td>8:01 a.m. to 10 a.m.</td>
       <td>32</td>
       <td>2</td>
       <td>9</td>
@@ -356,7 +356,7 @@
       <td>8</td>
     </tr>
     <tr>
-      <td>10:01 a.m.–Noon</td>
+      <td>10:01 a.m. to Noon</td>
       <td>41</td>
       <td>9</td>
       <td>5</td>
@@ -365,7 +365,7 @@
       <td>14</td>
     </tr>
     <tr>
-      <td>12:01 p.m.–2 p.m.</td>
+      <td>12:01 p.m. to 2 p.m.</td>
       <td>41</td>
       <td>9</td>
       <td>11</td>
@@ -374,7 +374,7 @@
       <td>2</td>
     </tr>
     <tr>
-      <td>2:01 p.m.–4 p.m.</td>
+      <td>2:01 p.m. to 4 p.m.</td>
       <td>53</td>
       <td>10</td>
       <td>4</td>
@@ -383,7 +383,7 @@
       <td>10</td>
     </tr>
     <tr>
-      <td>4:01 p.m.–6 p.m.</td>
+      <td>4:01 p.m. to 6 p.m.</td>
       <td>51</td>
       <td>17</td>
       <td>9</td>
@@ -392,7 +392,7 @@
       <td>9</td>
     </tr>
     <tr>
-      <td>6:01 p.m.–8 p.m.</td>
+      <td>6:01 p.m. to 8 p.m.</td>
       <td>51</td>
       <td>7</td>
       <td>12</td>
@@ -401,7 +401,7 @@
       <td>9</td>
     </tr>
     <tr>
-      <td>8:01 p.m.–10 p.m.</td>
+      <td>8:01 p.m. to 10 p.m.</td>
       <td>57</td>
       <td>12</td>
       <td>14</td>
@@ -410,7 +410,7 @@
       <td>7</td>
     </tr>
     <tr>
-      <td>10:01 p.m.–Midnight</td>
+      <td>10:01 p.m. to Midnight</td>
       <td>65</td>
       <td>10</td>
       <td>11</td>
