--- a/police_assault.html
+++ b/police_assault.html
@@ -66,7 +66,7 @@
       <th>2015</th>
     </tr>
     <tr>
-      <td>Number of victim officers</td>
+      <td>Number of Victim Officers</td>
       <td>532</td>
       <td>110</td>
       <td>105</td>
@@ -206,7 +206,7 @@
       <td>2015</td>
     </tr>
     <tr>
-      <td>Number of victim officers</td>
+      <td>Number of Victim Officers</td>
       <td>532</td>
       <td>110</td>
       <td>105</td>
@@ -302,7 +302,7 @@
       <td>2015</td>
     </tr>
     <tr>
-      <td>Number of victim officers</td>
+      <td>Number of Victim Officers</td>
       <td>532</td>
       <td>110</td>
       <td>105</td>
@@ -472,7 +472,7 @@
       <th>Outside</th>
     </tr>
     <tr>
-      <th>Number of victim officers</th>
+      <th>Number of Victim Officers</th>
       <th>Total</th> 
       <th>532</th>
       <th>23</th>
@@ -722,7 +722,7 @@
   <br>
 
   <h2 id = "race_sex">Law Enforcement Officers Assaulted</h2>
-  <p>Race and Sex of Victim Officers and Age group, 2011–2015</p>
+  <p>Race and Sex of Victim Officers and Age group, 2011 to 2015</p>
 
   <table style="width:80%" align="center">
     <tr>
@@ -981,13 +981,13 @@
   <br>
 
   <h2 id = "body_armor">Law Enforcement Officers Assaulted</h2>
-  <p>Number of Victim Officers Wearing Body Armor, Holster, or Uniform, 2011–2015</p>
+  <p>Number of Victim Officers Wearing Body Armor, Holster, or Uniform, 2011 to 2015</p>
 
   <table style="width:80%" align="center">
     <tr>
       <th>Age</th> 
       <th></th>
-      <th>total</th>
+      <th>Total</th>
       <th>2011</th>
       <th>2012</th>
       <th>2013</th>
@@ -995,8 +995,8 @@
       <th>2015</th>
     </tr>
     <tr>
-      <td>number of victim</td>
-      <td> total</td>
+      <td>Number of Victims</td>
+      <td> Total</td>
       <td> 532</td>
       <td> 110</td>
       <td> 105</td>
@@ -1005,8 +1005,8 @@
       <td> 85</td>
     </tr>
     <tr>
-      <td>wearing body armor</td>
-      <td> total</td>
+      <td>Wearing Body Armor</td>
+      <td> Total</td>
       <td> 470</td>
       <td> 97</td>
       <td> 91</td>
@@ -1016,7 +1016,7 @@
     </tr>
     <tr>
       <td></td>
-      <td> in uniform</td>
+      <td> In Uniform</td>
       <td> 445</td>
       <td> 89</td>
       <td> 80</td>
@@ -1026,7 +1026,7 @@
     </tr>
     <tr>
       <td></td>
-      <td> not in uniform</td>
+      <td> Not in Uniform</td>
       <td> 25</td>
       <td> 8</td>
       <td> 11</td>
@@ -1036,7 +1036,7 @@
     </tr>
     <tr>
       <td> </td>
-      <td>wearing uniform not report</td>
+      <td>Wearing Uniform, Not Reported</td>
       <td> 0</td>
       <td> 0</td>
       <td> 0</td>
@@ -1045,8 +1045,8 @@
       <td> 0</td>
     </tr>
     <tr>
-      <td>wearing holster</td>
-      <td> total</td>
+      <td>Wearing Holster</td>
+      <td> Total</td>
       <td> 518</td>
       <td> 105</td>
       <td> 104</td>
@@ -1056,7 +1056,7 @@
     </tr>
     <tr>
       <td></td>
-      <td> in uniform</td>
+      <td> In Uniform</td>
       <td> 469</td>
       <td> 91</td>
       <td> 88</td>
@@ -1066,7 +1066,7 @@
     </tr>
     <tr>
       <td></td>
-      <td> not in uniform</td>
+      <td> Not in Uniform</td>
       <td> 48</td>
       <td> 14</td>
       <td> 16</td>
@@ -1076,7 +1076,7 @@
     </tr>
     <tr>
       <td></td>
-      <td> wearing uniform not report</td>
+      <td> Wearing Uniform, Not Reported</td>
       <td> 1</td>
       <td> 0</td>
       <td> 0</td>
