Changed personal description

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<div class = "picture_overlay_right">
 						<div class = "picture_text">
 							<h1>Karefa Kargbo (JR)</h1>
-							<p>Content Writer</p>
+							<p>Statistical Analyzer</p>
 							<p>Computer Science Major</p>
 							<p>Economics Major</p>
 						</div>
