Commented out the first search bar

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<p>Include what the user can do here with the search bar</p>
 	</form>-->
 
-	<h2>This search bar can allow you to access our public database. You can access comprehensive crime data across the United States, or you can access individual state crime data.</h2>
+	<!--<h2>This search bar can allow you to access our public database. You can access comprehensive crime data across the United States, or you can access individual state crime data.</h2>
 
 	<h2>Are you looking for your United State's criminal data?</h2>
 	<h2>Or you looking for state's criminal data that you're interested in?</h2>
@@ -74,7 +74,7 @@
 	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
-	<hr class = "short_line" id="about">
+	<hr class = "short_line" id="about">-->
 
 	<br>
 	<br>
