--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 	<div class = "paragraph" >
 		<h4 class = "contributions">The data was collected through public access goverment websites, data.gov and fbi.gov. The maps were created with CARTO, a free software for students. A special
 		thanks to Professor Owrang for mentoring the capstone course. Certain HTML tables were made using an online site called Tableizer!.</h4>
-		<h4 class = "contact_us">For any questions please us at jd1504a@american.edu.</h4>
+		<h4 class = "contact_us">For any questions please us at jd1504a@american.edu. Or zs7787a@american.edu</h4>
 		<h4 class = "license">This is a free software for educational and personal use, referencing the authors is not necessary. This software can not be used for commreical uses.</h4>
 	</div>
 	<h2><p> Pretty great right?! 
