--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 		<div class = "row">
 			<div class = "column">
 				<div class = "picture_container">
-					<img class = "image_left" src = "Victor_photo.jpg" alt = "author_victor">
+					<img class = "image_left" src = "../Victor_photo.jpg" alt = "author_victor">
 					<div class = "picture_overlay_left">
 						<div class = "picture_text">
 							<h1>Ziyang She</h1>
@@ -111,7 +111,7 @@
 			<!--Center Picture-->
 			<div class = "column">
 				<div class = "picture_container">
-					<img class = "image_up" src = "James_Photo.jpg" alt = "author_james">
+					<img class = "image_up" src = "../James_Photo.jpg" alt = "author_james">
 					<div class = "picture_overlay_up">
 						<div class = "picture_text">
 							<h1>James Deromedi</h1>
@@ -125,7 +125,7 @@
 			<!--Right Picture-->
 			<div class = "column">
 				<div class = "picture_container">
-					<img class = "image_right" src = "JRPicture3.jpg" alt = "author_JR">
+					<img class = "image_right" src = "../JRPicture3.jpg" alt = "author_JR">
 					<div class = "picture_overlay_right">
 						<div class = "picture_text">
 							<h1>Karefa Kargbo (JR)</h1>
